--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -22,6 +22,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     ripgrep \
     fzf \
+    neovim \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -31,6 +32,7 @@ COPY /to_copy_in/.tmux.conf /root/.tmux.conf
 COPY /to_copy_in/.profile /root/.profile
 COPY /to_copy_in/.gitconfig /root/.gitconfig
 COPY /to_copy_in/py_help /root/.py_help
+# we don't use launch file in local version
 
 # root must take ownership of the copied files
 RUN chown -R root:root /root && \
@@ -50,6 +52,18 @@ RUN export PATH="$HOME/.local/bin:$PATH" && \
     uv tool install rust-just && \
     uv tool install rich-cli && \
     (cd /root/.py_help && uv sync)
+
+######################
+#~     NODE / JS    ~#
+######################
+
+# Download and install nvm and node:
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash && \
+    . "$HOME/.nvm/nvm.sh" && \
+    nvm install 22
+
+RUN . "$HOME/.nvm/nvm.sh" && \
+    npm install --global gulp-cli
 
 ########################
 #~ METADATA & EXECUTE ~#
