--- a/to_copy_in/.tmux.conf
+++ b/to_copy_in/.tmux.conf
@@ -7,7 +7,13 @@ bind Space send-prefix
 
 # This enables True Color support in tmux
 set -g default-terminal "tmux-256color"
+
+# Enable TrueColor (Tc, 24-bit colors) for all TERM=*256col* terminals:
 set -ga terminal-overrides ",*256col*:Tc"
+
+# this line allows applications running in tmux (like vim or other terminal programs)
+# to change your cursor shape - for example, switching between a block cursor and a
+# line cursor when toggling between insert and normal mode in vim.
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Split windows using | and -
