Added some explanation comments

--- a/to_copy_in/.tmux.conf
+++ b/to_copy_in/.tmux.conf
@@ -1,4 +1,7 @@
-# The default tmux settings are crappy. These settings make tmux more usable.
+# The default Tmux keybindings are known for being unintuitive.
+# There's lots of blog posts on the internet about improving
+# the keybindings. Here is one example:
+# https://hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
 # Set prefix to Ctrl-Space instead of Ctrl-b
 unbind C-b
